--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,12 @@ install:
   - cp config.sample config
   - ./bootstrap-vitasdk.sh
   - export VITASDK=/usr/local/vitasdk
-  - export PATH=$VITASDK/bin:$PATH # add vitasdk tool to $PATH if you havent already
+  - export PATH=$VITASDK/bin:$PATH
   - ./install-all.sh
 
 script:
   - make
- env:
+env:
  global:
   - TOP=$PWD
   - PREFIX=$TOP/dist
