--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 os:
   - linux
+language: c
 
 install:
-  - sudo apt-get install qemu-system-arm
+  - sudo apt-get install qemu-kvm qemu
   - git clone https://github.com/vitadev/vdpm
   - cd vdpm
   - cp config.sample config
